<resources>
    <string name="instagram">Instagram</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="thanks">Thanks</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="see_more">See More</string>
    <string name="cancel">Cancel</string>
    <string name="report_inappropriate">Report</string>
    <string name="report_option_dialog_title_for_post">Choose a reason for reporting this post:</string>
    <string name="report_option_dialog_title_for_profile">Choose a reason for reporting this profile:</string>
    <string name="report_option_spam">"It's spam"</string>
    <string name="report_option_inappropriate">"It's inappropriate"</string>
    <string name="report_options">Report…</string>
    <string name="reported">Reported</string>
    <string name="try_again">Try again</string>
    <string name="retry">Retry</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes_im_sure">"Yes, I'm sure"</string>
    <string name="loading">Loading...</string>
    <string name="sending">Sending...</string>
    <string name="dismiss">Dismiss</string>
    <string name="failed">Unable to upload this item.</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="unknown_error_occured">An unknown error occurred</string>
    <string name="network_error">An unknown network error has occurred.</string>
    <string name="security_exception">Please turn on Internet Permission.</string>
    <string name="request_error">"Sorry, we couldn't complete your request. Please try again in a moment."</string>
    <string name="could_not_refresh_feed">"Couldn't refresh feed"</string>
    <string name="tap_to_refresh">Tap to Refresh</string>
    <string name="learn_more">Learn More</string>
    <string name="changes_saved">Changes saved</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="fail_confirm_email">"We can't confirm your email right now. Try again later."</string>
    <string name="fail_send_confirm_email">"We can't send you confirmation email right now. Try again later."</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="next_caps">NEXT</string>
    <string name="user_options">Options</string>
    <string name="menu_options">Options</string>
    <string name="share">Share</string>
    <string name="info">Info</string>
    <string name="posts">posts</string>
    <string name="allow">Allow</string>
    <string name="view_profile">View Profile</string>
    <string name="photo">Photo</string>
    <string name="see_all">See All</string>
    <string name="user_and_x_more">%1$s and %2$d more</string>
    <string name="hide">Hide</string>
    <string name="empty_photos">No photos to show</string>
    <string name="private_account">Private Account</string>
    <string name="reset_logout_are_you_sure">Do you want to logout the existing account?</string>
    <string name="direct_send">Send</string>
    <string name="feedback_required_report_problem_toast">Thanks for reporting this problem.</string>
    <string name="player_service_disconnected">Video player service disconnected</string>
    <string name="posts_plural">%1$s posts</string>
    <string name="posts_plural_titlecase">%1$d Posts</string>
    <string name="posts_singular">%1$s post</string>
    <string name="view_count_plural">%1$s views</string>
    <string name="views">Views</string>
    <string name="no_views_yet">No views yet</string>
    <string name="view_count_singular">%1$s view</string>
    <string name="number_of_people_who_like_this_photo">%1$s likes</string>
    <string name="number_of_people_who_like_this_photo_singular">%1$s like</string>
    <string name="reach_count_plural">%1$s reaches</string>
    <string name="reach_count_singular">%1$s reach</string>
    <string name="comment_count_plural">%1$s comments</string>
    <string name="comment_count_singular">%1$s comment</string>
    <string name="see_translation">SEE TRANSLATION</string>
    <string name="see_original">SEE ORIGINAL</string>
    <string name="loading_translation">TRANSLATING…</string>
    <string name="translation_fail">"Sorry, we couldn't translate this. Try again in a minute."</string>
    <string name="home_description">Home</string>
    <string name="notifications_description">Notifications</string>
    <string name="camera_description">Camera</string>
    <string name="explore_description">Search and Explore</string>
    <string name="profile_description">Profile</string>
    <string name="profile_photo_description">Profile Photo</string>
    <string name="profile_grid_description">Grid View</string>
    <string name="profile_list_description">List View</string>
    <string name="profile_map_description">Photo Map</string>
    <string name="profile_tagged_description">Photos of You</string>
    <string name="discover_new_people_description">Discover new people to follow</string>
    <string name="image_description">Photo from %1$s</string>
    <string name="video_description">Video from %1$s</string>
    <string name="grid_photo">Photo Thumbnail at Row %1$d, Column %2$d</string>
    <string name="grid_video">Video Thumbnail at Row %1$d, Column %2$d</string>
    <string name="grid_placeholder">Placeholder at Row %1$d, Column %2$d</string>
    <string name="message">Message</string>
    <string name="camera">Camera</string>
    <string name="photo_thumbnail">Photo Thumbnail</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="send">Send</string>
    <string name="unlike">Unlike</string>
    <string name="liked">Liked</string>
    <string name="optional">optional</string>
    <string name="sharing_disabled">Sharing Disabled</string>
    <string name="logging_in">Logging In...</string>
    <string name="logging_out">Logging out…</string>
    <string name="double_tap_to_like_hint">Tip: Double-tap on posts to like them!</string>
    <string name="no_users_found">No users found.</string>
    <string name="see_more_likes">See more (%1$s)</string>
    <string name="search_for_x">Search for \"%1$s\"</string>
    <string name="searching">Searching…</string>
    <string name="must_be_logged_in">You must log in to view this item.</string>
    <string name="no_posts_yet_self_fragment">Start capturing and sharing your moments</string>
    <string name="post_deleted">This post has been deleted</string>
    <string name="copy_profile_url">Copy Profile URL</string>
    <string name="copy_profile_url_confirmation">"This user's sharable profile link has been copied to the clipboard."</string>
    <string name="and">and</string>
    <string name="promote">Promote</string>
    <string name="promotions">Promotions</string>
    <string name="promoted_posts_subtitle">Recent activity from your promotions.</string>
    <string name="pending_promoted_posts">Pending</string>
    <string name="active_promoted_posts">Active</string>
    <string name="ended_promoted_posts">Ended</string>
    <string name="ads_manager_null_state_title">No Promotions</string>
    <string name="ads_manager_null_state_subtitle">You have no active or ended promotions. You can create a promotion directly from any of your posts.</string>
    <string name="view_promotions">View Promotion</string>
    <string name="preview">Preview</string>
    <string name="action_button">Action Button</string>
    <string name="audience">Audience</string>
    <string name="total_budget">Total Budget</string>
    <string name="duration">Duration</string>
    <string name="credit_card_name">%1$s ····%2$s</string>
    <string name="credit_card_expires">Expires %1$s/%2$s</string>
    <string name="paypal">PayPal</string>
    <string name="waiting_for_approval">Waiting for approval…</string>
    <string name="num_clicks">%1$d clicks</string>
    <string name="not_approved">Not Approved</string>
    <string name="currently_promoted">Currently Promoted</string>
    <string name="pending_approval">Pending Approval</string>
    <string name="promote_sent_for_approval">Thanks. Your promotion has been sent for review.</string>
    <string name="confirm_delete_boosted_post_title">Delete Promotion?</string>
    <string name="confirm_delete_boosted_post_subtitle">"If you delete this promotion, you won't be able to see any insights."</string>
    <string name="delete_boosted_post_failed">Could not delete promotion. Please try again later.</string>
    <string name="paused">Paused</string>
    <string name="insights">Insights</string>
    <string name="insights_time_frame_title">Time:</string>
    <string name="remove">Remove</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="use_username_or_email">Use Username or Email</string>
    <string name="send_an_sms">Send an SMS</string>
    <string name="no_pages_found">No Facebook Pages Found</string>
    <string name="easily_create_page">Easily create a Page for your business. Business Profiles on Instagram are linked to a Facebook Page.</string>
    <string name="create_page">Create A Page</string>
    <string name="already_have_page">"Already have a Page? You may not be an admin. Contact your Page's admin to get permissions"</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="street_address">Street Address</string>
    <string name="city_town">City/Town</string>
    <string name="zip_code">Zip Code</string>
    <string name="valid_address_to_map">Please add a valid address so people can navigate to your location in maps.</string>
    <string name="remove_address">Remove Address?</string>
    <string name="title_default_people_facebook">Connect to Facebook</string>
    <string name="title_connected_people_facebook">Connected to Facebook</string>
    <string name="subtitle_default_people_facebook">to follow your friends</string>
    <string name="title_default_people_contacts">Connect to Contacts</string>
    <string name="title_connected_people_contacts">Connected to Contacts</string>
    <string name="subtitle_default_people_contacts">to follow people you know</string>
    <string name="show_suggested_usernames">Show suggested usernames</string>
    <string name="Profile">Profile</string>
    <string name="phone_number_private">Only you will be able to see your phone number.</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="access_your_account">Access Your Account</string>
    <string name="use_your_facebook_info">Use Your Facebook Info</string>
    <string name="help_center">Help Center</string>
    <string name="enter_twice">Enter your new password twice.</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">New password, again</string>
    <string name="forgot_password_reset_using_facebook">Forgot Password? Reset using Facebook.</string>
    <string name="instagram_help_center">Instagram Help Center</string>
    <string name="thanks_for_feedback">Your feedback will help ads become more personalized and relevant to you.</string>
    <string name="APPIRATER_MESSAGE">"If you enjoy using %1$s, would you mind taking a moment to rate it? It won't take more than a minute. Thanks for your support!"</string>
    <string name="APPIRATER_MESSAGE_TITLE">Rate %1$s</string>
    <string name="APPIRATER_CANCEL_BUTTON">No, Thanks</string>
    <string name="APPIRATER_RATE_BUTTON">Rate %1$s</string>
    <string name="APPIRATER_RATE_LATER">Remind Me Later</string>
</resources>