<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/row_text_padding" android:paddingBottom="@dimen/row_text_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout style="@style/PaddedRow">
            <com.instagram.ui.text.FreightSansTextView android:id="@id/recovery_title" android:text="@string/access_your_account" style="@style/RowHeaderText" />
            <include layout="@layout/row_header_divider" />
        </FrameLayout>
        <FrameLayout android:id="@id/fragment_forgot_password_email_username" android:background="@drawable/bg_simple_row" style="@style/PaddedRow">
            <TextView android:textStyle="bold" android:id="@id/email_username_textview" android:text="@string/use_username_or_email" android:drawableLeft="@drawable/profile_glyph_username" style="@style/FieldWithGlyph" />
            <include layout="@layout/row_divider" />
        </FrameLayout>
        <FrameLayout android:id="@id/fragment_forgot_password_sms" android:background="@drawable/bg_simple_row" style="@style/PaddedRow">
            <TextView android:textStyle="bold" android:id="@id/sms_textview" android:text="@string/send_an_sms" android:drawableLeft="@drawable/profile_glyph_phone" style="@style/FieldWithGlyph" />
            <include layout="@layout/row_divider" />
        </FrameLayout>
        <FrameLayout android:id="@id/fragment_forgot_password_facebook" android:background="@drawable/bg_simple_row" style="@style/PaddedRow">
            <TextView android:textStyle="bold" android:id="@id/facebook_textview" android:text="@string/log_in_with_facebook" android:drawableLeft="@drawable/share_facebook" style="@style/FieldWithGlyph" />
            <include layout="@layout/row_divider" />
        </FrameLayout>
        <FrameLayout android:paddingTop="16.0dip" style="@style/PaddedRow">
            <com.instagram.ui.text.FreightSansTextView android:text="@string/help_center" style="@style/RowHeaderText" />
            <include layout="@layout/row_header_divider" />
        </FrameLayout>
        <FrameLayout android:id="@id/fragment_forgot_password_help_center" android:background="@drawable/bg_simple_row" style="@style/PaddedRow">
            <TextView android:textStyle="bold" android:id="@id/help_textview" android:text="@string/instagram_help_center" android:drawableLeft="@drawable/help" style="@style/FieldWithGlyph" />
            <include layout="@layout/row_divider" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>