<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/modal_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/alertTitleContainer" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.instagram.ui.text.FreightSansTextView android:id="@id/appirater_title_area" android:paddingTop="12.0dip" android:text="@string/APPIRATER_MESSAGE_TITLE" app:capitalize="false" style="@style/RowHeaderText" />
        <include layout="@layout/row_header_divider" />
    </FrameLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/appirater_message_area" android:padding="@dimen/row_text_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/row_height_small" android:text="@string/APPIRATER_MESSAGE" android:lineSpacingMultiplier="1.2" />
        <include layout="@layout/row_divider" />
    </FrameLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:gravity="center" android:id="@id/appirater_rate_button" android:background="@drawable/bg_simple_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/row_height_small" android:text="@string/APPIRATER_RATE_BUTTON" />
        <include layout="@layout/row_divider" />
    </FrameLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:gravity="center" android:id="@id/appirater_rate_later_button" android:background="@drawable/bg_simple_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/row_height_small" android:text="@string/APPIRATER_RATE_LATER" />
        <include layout="@layout/row_divider" />
    </FrameLayout>
    <TextView android:textStyle="bold" android:gravity="center" android:id="@id/appirater_cancel_button" android:background="@drawable/dialog_row_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/row_height_small" android:text="@string/APPIRATER_CANCEL_BUTTON" />
</LinearLayout>