<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/edit_profile_fields" android:paddingTop="@dimen/row_text_padding" android:paddingBottom="@dimen/row_text_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/current_password" android:nextFocusDown="@id/new_password" android:hint="@string/current_password" android:drawableLeft="@drawable/profile_glyph_password" android:inputType="textPassword" android:imeOptions="actionNext" android:contentDescription="@string/current_password" style="@style/FieldWithGlyph.WithMargin" />
        <EditText android:id="@id/new_password" android:nextFocusDown="@id/confirm_new_password" android:hint="@string/new_password" android:drawableLeft="@drawable/profile_glyph_password" android:inputType="textPassword" android:imeOptions="actionNext" android:contentDescription="@string/new_password" style="@style/FieldWithGlyph.WithMargin" />
        <EditText android:id="@id/confirm_new_password" android:hint="@string/new_password_again" android:drawableLeft="@drawable/profile_glyph_password" android:inputType="textPassword" android:imeOptions="actionDone" android:contentDescription="@string/new_password_again" style="@style/FieldWithGlyph.WithMargin" />
        <TextView android:textColor="@color/accent_blue_medium" android:gravity="center_vertical" android:id="@id/reset_using_facebook_link" android:paddingLeft="@dimen/row_text_padding" android:paddingRight="@dimen/row_text_padding" android:layout_width="wrap_content" android:layout_height="@dimen/row_height_small" android:layout_marginLeft="@dimen/row_padding" android:layout_marginRight="@dimen/row_padding" android:text="@string/forgot_password_reset_using_facebook" />
    </LinearLayout>
</ScrollView>