<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingTop="28.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include layout="@layout/password_reset_header" />
        <EditText android:id="@id/new_password" android:hint="@string/new_password" android:drawableLeft="@drawable/profile_glyph_password" android:inputType="textPassword" android:imeOptions="actionNext" style="@style/FieldWithGlyph.WithMargin" />
        <EditText android:id="@id/confirm_new_password" android:nextFocusUp="@id/new_password" android:hint="@string/new_password_again" android:drawableLeft="@drawable/profile_glyph_password" android:inputType="textPassword" android:imeOptions="actionDone" style="@style/FieldWithGlyph.WithMargin" />
        <TextView android:textColor="@color/grey_light" android:padding="@dimen/row_text_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/row_padding" android:layout_marginRight="@dimen/row_padding" android:text="@string/enter_twice" android:lineSpacingExtra="4.0dip" />
    </LinearLayout>
</ScrollView>